packages/react-server/examples/basic/src/routes/test/error/boundary/dir/error.tsx
"use client";

export default function ErrorPage() {
  return <div>boundary/dir/error.tsx</div>;
}
